--- a/zhipengbird/_config.yml
+++ b/zhipengbird/_config.yml
@@ -3,21 +3,24 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle:
+title: 志鹏的技术博客
+subtitle: 记录成长的点滴
 description:
-keywords:
-author: John Doe
+author: 志鹏
 language:
 timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: http://yuanph.org
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
-
+# 自动生成sitemap
+sitemap:
+  path: sitemap.xml
+baidusitemap:
+  path: baidusitemap.xml
 # Directory
 source_dir: source
 public_dir: public
@@ -25,34 +28,30 @@ tag_dir: tags
 archive_dir: archives
 category_dir: categories
 code_dir: downloads/code
-i18n_dir: :lang
+i18n_dir:  :lang
 skip_render:
 
+
+
+
+
+
 # Writing
-new_post_name: :title.md # File name of new posts
+new_post_name:   :title.md # File name of new posts
 default_layout: post
 titlecase: false # Transform title into titlecase
 external_link: true # Open external links in new tab
 filename_case: 0
 render_drafts: false
-post_asset_folder: false
-relative_link: false
+post_asset_folder: true
+relative_link: true
 future: true
 highlight:
   enable: true
   line_number: true
-  auto_detect: false
+  auto_detect: true
   tab_replace:
-  
-# Home page setting
-# path: Root path for your blogs index page. (default = '')
-# per_page: Posts displayed per page. (0 = disable pagination)
-# order_by: Posts order. (Order by date descending by default)
-index_generator:
-  path: ''
-  per_page: 10
-  order_by: -date
-  
+
 # Category & Tag
 default_category: uncategorized
 category_map:
@@ -73,9 +72,25 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: landscape
+#theme: jacman
+theme: next
+
+
+feed:
+  type: atom
+  path: atom.xml
+  limit: 20
+  hub:
+#discuss
+disqus_shortname: yuanpinghua
+search:
+  path: search.xml
+  field: post
+  format: html
+  limit: 10000
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type:
+  type: git
+  repo: https://github.com/zhipengbird/zhipengbird.github.io.git
