--- a/zhipengbird/_config.yml
+++ b/zhipengbird/_config.yml
@@ -49,7 +49,7 @@ future: true
 highlight:
   enable: true
   line_number: true
-  auto_detect: true
+  auto_detect: false
   tab_replace:
 
 # Category & Tag
@@ -72,8 +72,8 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-#theme: jacman
-theme: next
+theme: jacman
+# theme: next
 
 
 feed:
