--- a/zhipengbird/_config.yml
+++ b/zhipengbird/_config.yml
@@ -12,7 +12,7 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yuanph.org
+url: http://yuanph.win
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
