--- a/zhipengbird/_config.yml
+++ b/zhipengbird/_config.yml
@@ -47,10 +47,16 @@ post_asset_folder: true
 relative_link: true
 future: true
 highlight:
-  enable: true
-  line_number: true
+  enable: false
+  line_number: false
   auto_detect: false
   tab_replace:
+
+prism_plugin:
+  mode: 'preprocess'    # realtime/preprocess
+  theme: 'tomorrow'
+  line_number: false    # default false
+  custom_css:
 
 # Category & Tag
 default_category: uncategorized
@@ -72,7 +78,7 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: jacman
+theme: hexo-theme-matery
 # theme: next
 # theme: jac
 
