--- a/zhipengbird/_config.yml
+++ b/zhipengbird/_config.yml
@@ -7,7 +7,7 @@ title: 志鹏的技术博客
 subtitle: 记录成长的点滴
 description: "故不积跬步，无以至千里；不积小流，无以成江海。骐骥一跃，不能十步；驽马十驾，功在不舍。锲而舍之，朽木不折；锲而不舍，金石可镂。"
 author: 志鹏
-language:
+language: zh-CN
 timezone:
 
 # URL
